--- a/edhrec-aggirgator/css/table.css
+++ b/edhrec-aggirgator/css/table.css
@@ -1,3 +1,9 @@
-table, th, td {
-    border: 1px solid black;
+table {
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #000;
+    padding: 0.5rem;
+    text-align: left;
 }
