--- a/ck_api_data/css/stylesheet.css
+++ b/ck_api_data/css/stylesheet.css
@@ -24,9 +24,21 @@
     border-collapse: collapse;
     text-align: left;
     padding: 3;
+    width: fit-content;
 }
 
-td,
 th {
     width: fit-content;
+    background: white;
+    position: sticky;
+    box-shadow: 0 2px 2px -1px black;
+    top: 0; /* Don't forget this, required for the stickiness */
+}
+
+.retailPrice {
+    background-color: beige;
+}
+
+.buyPrice {
+    background-color: aquamarine;
 }
