--- a/binderPoD_bl_prices/css/stylesheet.css
+++ b/binderPoD_bl_prices/css/stylesheet.css
@@ -1,12 +1,28 @@
 #dataFilter {
-    width: 100%;
+    width: 50%;
+    float: left;
 }
 
 #cardNames {
-    width: 40%;
+    width: 100%;
     height: 25%;
     border: 1px solid #000;
     resize: none;
+}
+
+#information {
+    float: left;
+    padding-left: 20px;
+}
+
+.correct {
+    font-weight: bold;
+    color: green;
+}
+
+.incorrect {
+    font-weight: bold;
+    color: red;
 }
 
 #listDisplay {
