--- a/binderPoS_bl_prices/css/stylesheet.css
+++ b/binderPoS_bl_prices/css/stylesheet.css
@@ -39,7 +39,7 @@
     border: 1px solid black;
     border-collapse: collapse;
     text-align: left;
-    padding: 3;
+    padding: 3px;
     width: fit-content;
 }
 
