--- a/ck_api_data/css/stylesheet.css
+++ b/ck_api_data/css/stylesheet.css
@@ -23,12 +23,12 @@
     border: 1px solid black;
     border-collapse: collapse;
     text-align: left;
-    padding: 3;
+    padding: 3px;
     width: fit-content;
 }
 
 td {
-    white-space: nowrap
+    white-space: nowrap;
 }
 
 th {
