--- a/scg_bl_prices/css/stylesheet.css
+++ b/scg_bl_prices/css/stylesheet.css
@@ -1,7 +1,3 @@
-#buttonWrapper {
-    position: fixed;
-}
-
 #dataDisplay {
     width: 100%;
 }
@@ -11,11 +7,29 @@
     height: 50%;
     border: 1px solid #000;
     resize: none;
-    position: fixed;
 }
 
-#linkDisplay {
-    width: 45%;
-    float: right;
-    position: relative;
+#displayData {
+    border-collapse: collapse;
+}
+
+#displayData td,
+#displayData th{
+    border: 1px solid black;
+    border-collapse: collapse;
+    text-align: left;
+    padding: 3px;
+    width: fit-content;
+}
+
+td {
+    white-space: nowrap;
+}
+
+th {
+    width: fit-content;
+    background: white;
+    position: sticky;
+    box-shadow: 0 2px 2px -1px black;
+    top: 0; /* Don't forget this, required for the stickiness */
 }
