--- a/sports_cards_link_creation/css/stylesheet.css
+++ b/sports_cards_link_creation/css/stylesheet.css
@@ -1,3 +1,8 @@
+#dataFilter {
+    width: 50%;
+    float: left;
+}
+
 #buttonWrapper {
     position: fixed;
 }
@@ -7,15 +12,38 @@
 }
 
 #productNames {
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 25%;
     border: 1px solid #000;
     resize: none;
-    position: fixed;
 }
 
-#linkDisplay {
+#listDisplay {
     width: 45%;
-    float: right;
     position: relative;
+}
+
+#displayData {
+    border-collapse: collapse;
+}
+
+#displayData td,
+#displayData th{
+    border: 1px solid black;
+    border-collapse: collapse;
+    text-align: left;
+    padding: 3px;
+    width: fit-content;
+}
+
+td {
+    white-space: nowrap;
+}
+
+th {
+    width: fit-content;
+    background: white;
+    position: sticky;
+    box-shadow: 0 2px 2px -1px black;
+    top: 0; /* Don't forget this, required for the stickiness */
 }
