refactor of the filter, sadge

--- a/ck_api_data/css/stylesheet.css
+++ b/ck_api_data/css/stylesheet.css
@@ -53,6 +53,11 @@ th {
     color: white;
 }
 
+.warningText {
+    color: red;
+    font-weight: bold;
+}
+
 .warning,
 .lowBuyPrice{
     background-color: #fdbac4;
