--- a/edhrec-aggregator/css/table.css
+++ b/edhrec-aggregator/css/table.css
@@ -7,3 +7,46 @@ th, td {
     padding: 0.5rem;
     text-align: left;
 }
+
+#displayData {
+    border-collapse: collapse;
+}
+
+#displayData td,
+#displayData th{
+    border: 1px solid black;
+    border-collapse: collapse;
+    text-align: left;
+    padding: 3px;
+    width: fit-content;
+}
+
+td {
+    white-space: nowrap;
+}
+
+th {
+    width: fit-content;
+    background: white;
+    position: sticky;
+    box-shadow: 0 2px 2px -1px black;
+    top: 0; /* Don't forget this, required for the stickiness */
+}
+
+#caption-0 {
+    background: #3498db;
+    color: white;
+    font-weight: bold;
+}
+
+#caption-1 {
+    background: cadetblue;
+    color: white;
+    font-weight: bold;
+}
+
+#caption-2 {
+    background: cornflowerblue;
+    color: white;
+    font-weight: bold;
+}
