--- a/edhrec-aggregator/css/stylesheet.css
+++ b/edhrec-aggregator/css/stylesheet.css
@@ -2,11 +2,8 @@
     clear: both;
 }
 
-#displayStatus {
-    float: left;
-}
-
-#topCardsByType {
+#topCardsByType,
+#topCardsByColor {
     margin-left: 5px;
 }
 
