--- a/edhrec-aggregator/css/stylesheet.css
+++ b/edhrec-aggregator/css/stylesheet.css
@@ -1,5 +1,6 @@
-#topCardsSelectors,
-#topCardsByMonthSelector{
+#topCardsSelector,
+#topCommandersByColorSelector,
+#topCardsByMonthSelector {
     float: left;
     margin-right: 15px;
 }
