initial work for intake

--- a/edhrec-aggregator/css/stylesheet.css
+++ b/edhrec-aggregator/css/stylesheet.css
@@ -1,6 +1,7 @@
 #topCardsSelector,
 #topCommandersByColorSelector,
-#topCardsByMonthSelector {
+#topCardsByMonthSelector,
+#individualCardSearchBlock {
     float: left;
     margin-right: 15px;
 }
