--- a/edhrec-aggregator/css/table.css
+++ b/edhrec-aggregator/css/table.css
@@ -8,12 +8,12 @@ th, td {
     text-align: left;
 }
 
-#displayData {
+#displayCardData {
     border-collapse: collapse;
 }
 
-#displayData td,
-#displayData th{
+#displayCardData td,
+#displayCardData th{
     border: 1px solid black;
     border-collapse: collapse;
     text-align: left;
@@ -27,7 +27,7 @@ td {
 
 th {
     width: fit-content;
-    background: white;
+    background: #d9d9d9;
     position: sticky;
     box-shadow: 0 2px 2px -1px black;
     top: 0; /* Don't forget this, required for the stickiness */
