individual card update

--- a/edhrec-aggregator/css/stylesheet.css
+++ b/edhrec-aggregator/css/stylesheet.css
@@ -1,7 +1,7 @@
 #topCardsSelector,
 #topCommandersByColorSelector,
-#topCardsByMonthSelector,
-#individualCardSearchBlock {
+#individualCardSearchSelector,
+#topCardsByMonthSelector {
     float: left;
     margin-right: 15px;
 }
