updated table css to include a background hover

--- a/moxfield-api/css/table.css
+++ b/moxfield-api/css/table.css
@@ -21,16 +21,20 @@ th, td {
     width: fit-content;
 }
 
-td {
-    white-space: nowrap;
-}
-
 th {
     width: fit-content;
     background: #d9d9d9;
     position: sticky;
     box-shadow: 0 2px 2px -1px black;
     top: 0; /* Don't forget this, required for the stickiness */
+}
+
+tr:hover {
+    background-color: bisque;
+}
+
+td {
+    white-space: nowrap;
 }
 
 #caption-0 {
