--- a/ck_api_data/css/stylesheet.css
+++ b/ck_api_data/css/stylesheet.css
@@ -75,3 +75,10 @@ td {
 #warningText {
     background: lightpink;
 }
+
+#hostlistUpdate {
+    font-style: italic;
+    font-weight: bold;
+    font-size: 10pt;
+    color: palevioletred;
+}
